@@ -14,9 +14,10 @@ STELLA, CHANGES
 #### 0.8.5 (2010-03-??) ###############################
 
 * CHANGE: Testrun#samples contains all data samples for each event in a given batch
+* CHANGE: Renamed Testrun#events -> Testrun#event_probes
 * ADDED: Testrun#logsize
 * ADDED: Store HTTP status codes in Testrun#stats
-
+* ADDED: Store error messages in Sample#errors
 
 #### 0.8.4 (2010-03-19) ###############################
 
